delete radix separator and just use div

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,4 @@
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="Wedding ventures">
-  <main class="flex flex-col mx-auto">
-    <!-- <Hero image="image.jpeg"/> -->
-  </main>
-</Layout>
+<Layout title="Wedding ventures" />
