--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
+import Hero from '../components/screen/hero/Hero.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="Wedding ventures" />
+<Layout title="Wedding ventures">
+  <Hero image="banner.jpeg" />
+</Layout>
