--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -3,7 +3,7 @@ import Separator from '../separator'
 import NavbarItem from './NavbarItem.astro'
 ---
 
-<nav class="flex w-full justify-center">
+<nav class="fixed z-50 flex w-full justify-center">
   <ol class="my-8 hidden items-center space-x-4 lg:flex">
     <NavbarItem href="" name="HOME" />
     <Separator />
