--- a/src/components/screen/hero/Hero.astro
+++ b/src/components/screen/hero/Hero.astro
@@ -6,7 +6,9 @@ export interface Props {
 const { image } = Astro.props
 ---
 
-<section class="h-screen relative">
-  <img src={image} alt="hero" class="absolute inset-0 -z-10 object-cover h-full w-full" />
-  <div class="h-full bg-black bg-opacity-80 flex flex-col items-center justify-center"></div>
+<section class="relative h-screen">
+  <div class="absolute inset-0 -z-10">
+    <img src={image} alt="hero" class="h-full max-h-screen w-full object-cover" />
+  </div>
+  <div class="flex h-full flex-col items-center justify-center bg-black bg-opacity-50"></div>
 </section>
