add button to scroll to next section

--- a/src/components/screen/hero/Hero.astro
+++ b/src/components/screen/hero/Hero.astro
@@ -1,4 +1,6 @@
 ---
+import ArrowDown from '../../iconography/ArrowDown.astro'
+
 export interface Props {
   image: string
 }
@@ -10,5 +12,7 @@ const { image } = Astro.props
   <div class="absolute inset-0 -z-10">
     <img src={image} alt="hero" class="h-full max-h-screen w-full object-cover" />
   </div>
-  <div class="flex h-full flex-col items-center justify-center bg-black bg-opacity-50"></div>
+  <div class="flex h-full flex-col items-center justify-center bg-black bg-opacity-50">
+    <ArrowDown className="animate-bounce text-white !h-8 !w-8 absolute bottom-8" href="" />
+  </div>
 </section>
