--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Hero from '../components/screen/hero/Hero.astro'
+import Rsvp from '../components/screen/rsvp/Rsvp.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="Wedding ventures">
   <Hero image="banner.jpeg" />
+  <Rsvp image="banner.jpeg" />
 </Layout>
