--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Navbar from '../components/navbar/Navbar.astro'
+import Navbar from '../components/navbar/Navbar'
 
 export interface Props {
   title: string
@@ -18,7 +18,7 @@ const { title } = Astro.props
     <title>{title}</title>
   </head>
   <body>
-    <Navbar />
+    <Navbar client:load />
     <slot />
   </body>
 </html>
