--- a/src/components/screen/rsvp/Rsvp.astro
+++ b/src/components/screen/rsvp/Rsvp.astro
@@ -1,4 +1,6 @@
 ---
+import Stepper from '../../stepper'
+
 export interface Props {
   image: string
 }
@@ -7,8 +9,7 @@ const { image } = Astro.props
 ---
 
 <section id="rsvp" class="relative h-screen">
-  <div class="absolute inset-0 -z-10">
-    <img src={image} alt="hero" class="h-full max-h-screen w-full object-cover" />
+  <div class="flex h-full flex-col items-center justify-center bg-[#E6CDAE]">
+    <div class="mx-auto"><Stepper client:visible /></div>
   </div>
-  <div class="flex h-full flex-col items-center justify-center bg-black bg-opacity-50"></div>
 </section>
